# WindowsCaptureMCP

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  runtask.ps1  tasks.txt
docs/: PLAN.md  作業手順書.md
src/windows_capture_mcp/: __init__.py  capture.py  display.py  server.py  window.py
tests/: test_capture.py  test_display.py  test_mcp_integration.py  test_window.py
